# Ehtimam-Emergency-Network

./: .gitignore  CMakeLists.txt  LICENSE  README.md  client_app  server_app
.github/workflows/: build.yml
src/: main.cpp
src/client/: client.cpp
src/gui/: AppController.cpp  AppController.h  CircleWindow.cpp  CircleWindow.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  ResourcesWindow.cpp  ResourcesWindow.h
src/logic/: AlertManager.cpp  AlertManager.h  CircleManager.cpp  CircleManager.h
src/network/: NetworkClient.cpp  NetworkClient.h
src/server/: server.cpp
tests/: test_main.cpp
